--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -2,9 +2,7 @@
   "lsp": {
     "rust-analyzer": {
       "initialization_options": {
-        "check": {
-          "command": "clippy"
-        },
+        "check": { "command": "clippy" },
         "cargo": {
           // ---- aarch64_linux_android ------------------------------------------------------------
           // "target": "aarch64-linux-android",
@@ -19,40 +17,40 @@
           //   "cmp_telegram"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          // "target": "riscv32imc-esp-espidf",
-          // "features": ["executor", "logging", "cmp_esp", "cmp_plc", "serde_postcard"]
+          "target": "riscv32imc-esp-espidf",
+          "features": ["executor", "logging", "cmp_esp", "cmp_plc", "serde_postcard"]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          "target": "x86_64-unknown-linux-gnu",
-          "features": [
-            // "rustdoc",
-            // "executor",
-            // "single-thread",
-            //   "env_vars",
-            //   "logging",
-            //   "cmp_auth",
-            // "cmp_filesystem",
-            // "cmp_http_client",
-            // "cmp_http_server",
-            // "cmp_filesystem",
-            //   "cmp_influxdb",
-            "cmp_linux_spi_master"
-            // "cmp_linux_uart_master"
-            //   "cmp_modbus_client",
-            //   "cmp_mqtt_client",
-            //   "cmp_plc",
-            //   "cmp_redis_client",
-            //   "cmp_os_process",
-            //   "cmp_slint",
-            //   "cmp_surrealdb",
-            //   "cmp_system_info",
-            //   "cmp_telegram",
-            //   "cmp_timescaledb",
-            // "cmp_websocket_client",
-            // "cmp_websocket_server",
-            // "serde_json",
-            // "serde_postcard"
-            // "serde_toml"
-          ]
+          // "target": "x86_64-unknown-linux-gnu",
+          // "features": [
+          // "rustdoc",
+          // "executor",
+          // "single-thread",
+          //   "env_vars",
+          //   "logging",
+          //   "cmp_auth",
+          // "cmp_filesystem",
+          // "cmp_http_client",
+          // "cmp_http_server",
+          // "cmp_filesystem",
+          // "cmp_influxdb"
+          // "cmp_linux_spi_master"
+          // "cmp_linux_uart_master"
+          //   "cmp_modbus_client",
+          //   "cmp_mqtt_client",
+          // "cmp_plc"
+          // "cmp_redis_client",
+          //   "cmp_os_process",
+          // "cmp_slint"
+          //   "cmp_surrealdb",
+          //   "cmp_system_info",
+          //   "cmp_telegram",
+          //   "cmp_timescaledb",
+          // "cmp_websocket_client",
+          // "cmp_websocket_server",
+          // "serde_json",
+          // "serde_postcard"
+          // "serde_toml"
+          // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
