--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,8 @@ http = { version = "1.0.0", optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.8.0-beta", features = ["csr"], optional = true }
-leptos_router = { version = "0.8.0-beta", optional = true }
+leptos = { version = "0.8.0-rc1", features = ["csr"], optional = true }
+leptos_router = { version = "0.8.0-rc1", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
@@ -58,7 +58,7 @@ postcard = { version = "1.1.1", features = [
     "use-std",
     "use-crc",
 ], optional = true }
-reactive_stores = { version = "0.2.0-beta", optional = true }
+reactive_stores = { version = "0.2.0-rc1", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.14", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
@@ -129,11 +129,6 @@ gloo = { version = "0.11.0", features = [
 tracing-web = { version = "0.1.3", optional = true }
 
 
-[dev-dependencies]
-serde_json = { version = "1.0.114" }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
-
-
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 openssl = { version = "0.10", features = ["vendored"], optional = true }
 
@@ -151,6 +146,11 @@ tokio = { version = "^1.36.0", features = [
     "rt-multi-thread",
 ] }
 
+
+[dev-dependencies]
+serde_json = { version = "1.0.114" }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
+itertools = "*"
 
 [build-dependencies]
 embuild = { version = "0.31.3", features = ["espidf"] }
