--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { version = "0.4.40", features = ["serde"] }
 crc = { version = "3.2.1" }
 document-features = { version = "0.2.11" }
 getrandom = { version = "0.2", features = ["js"] }
+# TODO - заменить на web-time
 instant = { version = "0.1.13", features = ["wasm-bindgen"] }
 serde = { version = "1.0.197", features = ["derive"] }
 strum = { version = "0.27.1", features = ["derive"] }
@@ -127,6 +128,7 @@ gloo = { version = "0.11.0", features = [
     "utils",
 ] }
 tracing-web = { version = "0.1.3", optional = true }
+web-time = { version = "1.1.0", features = ["serde"] }
 
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
