--- a/target_config.json
+++ b/target_config.json
@@ -13,6 +13,7 @@
         "cmp_influxdb",
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
+        "cmp_math",
         "cmp_modbus_client",
         "cmp_mqtt_client",
         "cmp_os_process",
@@ -49,6 +50,7 @@
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
         "cmp_modbus_client",
+        "cmp_math",
         "cmp_mqtt_client",
         "cmp_os_process",
         "cmp_plc",
