--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ http = { version = "1.0.0", optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.8.0-rc1", features = ["csr"], optional = true }
-leptos_router = { version = "0.8.0-rc1", optional = true }
+leptos = { version = "0.8.0", features = ["csr"], optional = true }
+leptos_router = { version = "0.8.0", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
@@ -59,7 +59,7 @@ postcard = { version = "1.1.1", features = [
     "use-std",
     "use-crc",
 ], optional = true }
-reactive_stores = { version = "0.2.0-rc1", optional = true }
+reactive_stores = { version = "0.2.0", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.14", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
@@ -88,7 +88,7 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
     "tcp",
 ], optional = true }
 tokio-tungstenite = { version = "0.21.0", optional = true }
-tokio-util = { version = "0.7.10", optional = true }
+tokio-util = { version = "0.7.15", features = ["rt"], optional = true }
 toml = { version = "0.8.9", optional = true }
 tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
@@ -167,7 +167,7 @@ default = ["serde_json"]
 env_vars = ["dep:clap", "dep:dotenvy", "dep:envy", "dep:toml", "dep:url"]
 
 ## Базовые компоненты
-executor = ["dep:async-trait", "dep:futures", "dep:tokio"]
+executor = ["dep:async-trait", "dep:futures", "dep:tokio", "dep:tokio-util"]
 
 ## Настройка логгирования сообщений
 logging = [
@@ -292,12 +292,7 @@ cmp_websocket_client = [
 cmp_websocket_client_wasm = ["executor", "dep:futures", "dep:url"]
 
 ## Компонент websocket сервера
-cmp_websocket_server = [
-    "executor",
-    "dep:futures",
-    "dep:tokio-tungstenite",
-    "dep:tokio-util",
-]
+cmp_websocket_server = ["executor", "dep:futures", "dep:tokio-tungstenite"]
 
 ## Хранение и загрузка сообщений используя Web Storage API браузера
 cmp_webstorage = ["executor"]
