--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ http = { version = "1.0.0", optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.8.0", features = ["csr"], optional = true }
-leptos_router = { version = "0.8.0", optional = true }
+leptos = { version = "0.8.2", features = ["csr"], optional = true }
+leptos_router = { version = "0.8.2", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
@@ -59,7 +59,7 @@ postcard = { version = "1.1.1", features = [
     "use-std",
     "use-crc",
 ], optional = true }
-reactive_stores = { version = "0.2.0", optional = true }
+reactive_stores = { version = "0.2.2", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.14", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
@@ -90,6 +90,7 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
 tokio-tungstenite = { version = "0.21.0", optional = true }
 tokio-util = { version = "0.7.15", features = ["rt"], optional = true }
 toml = { version = "0.8.9", optional = true }
+tracing-loki = { version = "0.2.4", optional = true }
 tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
     "chrono",
@@ -114,8 +115,7 @@ ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
 rsiot-macros = { version = "0.0.73", path = "./rsiot-macros" }
 
 
-[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
-tracing-loki = { version = "0.2.4", optional = true }
+# [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -131,7 +131,7 @@ tracing-web = { version = "0.1.3", optional = true }
 web-time = { version = "1.1.0", features = ["serde"] }
 
 
-[target.'cfg(target_arch = "aarch64")'.dependencies]
+[target.'cfg(any(target_arch = "aarch64", target_arch = "arm"))'.dependencies]
 openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 
