--- a/target_config.json
+++ b/target_config.json
@@ -23,7 +23,6 @@
         "cmp_surrealdb",
         "cmp_system_info",
         "cmp_telegram",
-        "cmp_timescaledb",
         "cmp_websocket_client",
         "cmp_websocket_server",
         "env_vars"
@@ -60,11 +59,16 @@
         "cmp_surrealdb",
         "cmp_system_info",
         "cmp_telegram",
-        "cmp_timescaledb",
         "cmp_websocket_client",
         "cmp_websocket_server",
         "env_vars"
       ],
+      "add_feat": ["", "single-thread"]
+    },
+    {
+      "name": "armv7-unknown-linux-gnueabihf",
+      "toolchain": "+stable",
+      "features": ["executor", "logging", "cmp_linux_spi_master"],
       "add_feat": ["", "single-thread"]
     },
     {
