--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -18,50 +18,50 @@
           //   "cmp_telegram"
           // ]
           // ---- armv7-unknown-linux-gnueabihf ----------------------------------------------------
-          "target": "armv7-unknown-linux-gnueabihf",
-          "features": [
-            "rustdoc",
-            "cmp_influxdb",
-            "cmp_linux_spi_master",
-            "cmp_linux_uart_master",
-            "cmp_slint"
-          ]
+          // "target": "armv7-unknown-linux-gnueabihf",
+          // "features": [
+          //   "rustdoc",
+          //   "cmp_influxdb",
+          //   "cmp_linux_spi_master",
+          //   "cmp_linux_uart_master",
+          //   "cmp_slint"
+          // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
           // "target": "riscv32imc-esp-espidf",
           // "features": ["executor", "logging", "cmp_esp", "cmp_plc", "serde_postcard"]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          // "target": "x86_64-unknown-linux-gnu",
-          // "features": [
-          // "rustdoc",
-          // "executor",
-          // "single-thread",
-          //   "env_vars",
-          //   "logging",
-          //   "cmp_auth",
-          // "cmp_filesystem",
-          // "cmp_http_client",
-          // "cmp_http_server",
-          // "cmp_filesystem",
-          // "cmp_influxdb",
-          // "cmp_linux_spi_master",
-          // "cmp_linux_uart_master"
-          // "cmp_math",
-          // "cmp_modbus_client"
-          //   "cmp_mqtt_client",
-          // "cmp_plc",
-          // "cmp_redis_client",
-          //   "cmp_os_process",
-          // "cmp_slint"
-          //   "cmp_surrealdb",
-          //   "cmp_system_info",
-          //   "cmp_telegram",
-          // "cmp_timescaledb"
-          // "cmp_websocket_client",
-          // "cmp_websocket_server",
-          // "serde_json",
-          // "serde_postcard"
-          // "serde_toml"
-          // ]
+          "target": "x86_64-unknown-linux-gnu",
+          "features": [
+            // "rustdoc",
+            // "executor",
+            // "single-thread",
+            //   "env_vars",
+            //   "logging",
+            //   "cmp_auth",
+            // "cmp_filesystem",
+            // "cmp_http_client",
+            // "cmp_http_server",
+            // "cmp_filesystem",
+            // "cmp_influxdb",
+            // "cmp_linux_spi_master",
+            // "cmp_linux_uart_master"
+            // "cmp_math",
+            // "cmp_modbus_client"
+            "cmp_mqtt_client"
+            // "cmp_plc",
+            // "cmp_redis_client",
+            //   "cmp_os_process",
+            // "cmp_slint"
+            //   "cmp_surrealdb",
+            //   "cmp_system_info",
+            //   "cmp_telegram",
+            // "cmp_timescaledb"
+            // "cmp_websocket_client",
+            // "cmp_websocket_server"
+            // "serde_json",
+            // "serde_postcard"
+            // "serde_toml"
+          ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
