--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,7 +90,6 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
 tokio-tungstenite = { version = "0.21.0", optional = true }
 tokio-util = { version = "0.7.15", features = ["rt"], optional = true }
 toml = { version = "0.8.9", optional = true }
-tracing-loki = { version = "0.2.4", optional = true }
 tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
     "chrono",
@@ -115,7 +114,7 @@ ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
 rsiot-macros = { version = "0.0.73", path = "./rsiot-macros" }
 
 
-# [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
+# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -131,8 +130,9 @@ tracing-web = { version = "0.1.3", optional = true }
 web-time = { version = "1.1.0", features = ["serde"] }
 
 
-[target.'cfg(any(target_arch = "aarch64", target_arch = "arm"))'.dependencies]
+[target.'cfg(any(target_arch = "aarch64", target_arch = "arm", target_arch = "x86_64"))'.dependencies]
 openssl = { version = "0.10", features = ["vendored"], optional = true }
+tracing-loki = { version = "0.2.6", optional = true }
 
 
 [target.'cfg(all(target_arch = "riscv32", target_vendor = "espressif", target_os = "espidf"))'.dependencies]
