--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -22,6 +22,7 @@
           // "features": [
           //   "rustdoc",
           //   "cmp_influxdb",
+          //   "cmp_linux_i2c_master",
           //   "cmp_linux_spi_master",
           //   "cmp_linux_uart_master",
           //   "cmp_slint"
@@ -43,11 +44,12 @@
             // "cmp_http_server",
             // "cmp_filesystem",
             // "cmp_influxdb",
+            "cmp_linux_i2c_master"
             // "cmp_linux_spi_master",
             // "cmp_linux_uart_master"
             // "cmp_math",
             // "cmp_modbus_client"
-            "cmp_mqtt_client"
+            // "cmp_mqtt_client"
             // "cmp_plc",
             // "cmp_redis_client",
             //   "cmp_os_process",
