--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
     # "serial",
+    "i2c",
     "spi",
 ], default-features = false }
 log = { version = "0.4.21", optional = true }
@@ -139,7 +140,7 @@ tracing-loki = { version = "0.2.6", optional = true }
 esp-idf-svc = { version = "0.51.0", features = ["std"] }
 
 
-[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "arm"))'.dev-dependencies]
 tokio = { version = "^1.36.0", features = [
     "macros",
     "sync",
@@ -237,6 +238,9 @@ cmp_leptos = [
     "dep:wasm-bindgen",
     "dep:web-sys",
 ]
+
+## Комонент для коммуникации через порт I2C
+cmp_linux_i2c_master = ["executor", "dep:linux-embedded-hal"]
 
 ## Комонент для коммуникации через порт SPI
 cmp_linux_spi_master = ["executor", "dep:linux-embedded-hal"]
