--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,11 +69,11 @@ palette = { version = "0.7.4", features = ["named"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 slint = { version = "1.4.1", optional = true }
-sqlx = { version = "0.7.3", features = [
-    "chrono",
+sqlx = { version = "0.8.6", features = [
     "macros",
     "postgres",
     "runtime-tokio",
+    "time",
 ], optional = true }
 ssd1306 = { version = "0.9.0", optional = true }
 surrealdb = { version = "2.2.1", optional = true }
@@ -107,6 +107,7 @@ web-sys = { version = "0.3.68", features = [
     "Node",
     "NodeList",
     "Window",
+    "HtmlIFrameElement",
 ], optional = true }
 ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
     "smart-leds-trait",
@@ -445,10 +446,6 @@ path = "examples/cmp_surrealdb/cmp_surrealdb.rs"
 [[example]]
 name = "cmp_telegram"
 path = "./examples/cmp_telegram/cmp_telegram.rs"
-
-[[example]]
-name = "cmp_timescaledb"
-path = "examples/cmp_timescaledb/cmp_timescaledb.rs"
 
 [[example]]
 name = "cmp_websocket_client"
