--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = { version = "1.0.97" }
 bincode = { version = "1.3.3" }
 bitvec = { version = "1.0.1" }
 byteorder = { version = "1.5.0" }
+# TODO - возможно заменить на time
 chrono = { version = "0.4.40", features = ["serde"] }
 crc = { version = "3.2.1" }
 document-features = { version = "0.2.11" }
@@ -25,6 +26,7 @@ instant = { version = "0.1.13", features = ["wasm-bindgen"] }
 serde = { version = "1.0.197", features = ["derive"] }
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = { version = "2.0.12" }
+time = { version = "0.3.41", features = ["formatting", "macros", "serde"] }
 tracing = { version = "0.1.40", features = ["log"] }
 uuid = { version = "1.7.0", features = [
     "macro-diagnostics",
@@ -422,6 +424,10 @@ path = "examples/cmp_inject_periodic/cmp_inject_periodic.rs"
 [[example]]
 name = "cmp_plc"
 path = "examples/cmp_plc/cmp_plc/main.rs"
+
+[[example]]
+name = "example_doc"
+path = "examples/cmp_plc/example_doc/main.rs"
 
 [[example]]
 name = "config_plc_template"
