--- a/src/doc/external_services/timescaledb/docker-compose.yml
+++ b/src/doc/external_services/timescaledb/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       retries: 5
       start_period: 80s
     hostname: timescaledb
-    image: timescale/timescaledb:2.12.2-pg15
+    image: timescale/timescaledb:2.21.1-pg17 # https://hub.docker.com/r/timescale/timescaledb/tags
     networks:
       - network_internal
     environment:
@@ -28,6 +28,11 @@ services:
       - ./timescaledb/init.sql:/docker-entrypoint-initdb.d/init.sql
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+      - timescaledb_volume:/var/lib/postgresql/data
 
 networks:
   network_internal:
+
+volumes:
+  timescaledb_volume:
+    name: timescaledb_volume
