--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,29 @@
+[target.aarch64-linux-android]
+rustflags = [
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
+]
+
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
-rustflags = ["-C", "target-feature=+crt-static"]
+rustflags = [
+    "-C",
+    "target-feature=+crt-static",
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
+]
 
 [target.armv7-unknown-linux-gnueabihf]
 linker = "arm-linux-gnueabihf-gcc"
-rustflags = ["-C", "target-feature=+crt-static"]
+rustflags = [
+    "-C",
+    "target-feature=+crt-static",
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
+]
 
 [target.riscv32imc-esp-espidf]
 linker = "ldproxy"
@@ -14,8 +33,25 @@ rustflags = [
     "espidf_time64",
     "--cfg",
     "mio_unsupported_force_poll_poll", # https://github.com/tokio-rs/tokio/issues/5866
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
     # "-C",
     # "force-frame-pointers",
+]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
+]
+
+[target.wasm32-unknown-unknown]
+rustflags = [
+    # для tokio-console
+    "--cfg",
+    "tokio_unstable",
 ]
 
 [unstable]
