--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -18,54 +18,59 @@
           //   "cmp_telegram"
           // ]
           // ---- armv7-unknown-linux-gnueabihf ----------------------------------------------------
-          "target": "armv7-unknown-linux-gnueabihf",
+          // "target": "armv7-unknown-linux-gnueabihf",
+          // "features": [
+          //   "rustdoc",
+          //   "single-thread",
+          //   "cmp_influxdb",
+          //   "cmp_linux_i2c_master",
+          //   "cmp_linux_spi_master",
+          //   "cmp_linux_uart_master",
+          //   "cmp_plc",
+          //   "cmp_slint",
+          //   "cmp_timescaledb"
+          // ]
+          // ---- riscv32imc-esp-espidf ------------------------------------------------------------
+          // "target": "riscv32imc-esp-espidf",
+          // "features": ["executor", "log_esp", "cmp_esp", "cmp_plc", "serde_postcard"]
+          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
+          "target": "x86_64-unknown-linux-gnu",
           "features": [
-            "rustdoc",
+            // "rustdoc",
+            "executor",
+            // "single-thread",
+            //   "env_vars",
+            //   "logging",
+            //   "cmp_auth",
+            //   "cmp_filesystem",
+            //   "cmp_http_client",
+            //   "cmp_http_server",
+            //   "cmp_filesystem",
             //   "cmp_influxdb",
             //   "cmp_linux_i2c_master",
             //   "cmp_linux_spi_master",
             //   "cmp_linux_uart_master",
-            "cmp_plc",
+            //   "cmp_math",
+            //   "cmp_modbus_client",
+            //   "cmp_mqtt_client",
+            //   "cmp_plc",
+            //   "cmp_redis_client",
+            //   "cmp_os_process",
             //   "cmp_slint",
-            "cmp_timescaledb"
+            //   "cmp_surrealdb",
+            //   "cmp_system_info",
+            //   "cmp_telegram",
+            //   "cmp_timescaledb",
+            //   "cmp_websocket_client",
+            //   "cmp_websocket_server",
+            //   "serde_json",
+            //   "serde_postcard",
+            // "serde_toml"
+            "log_console",
+            // "log_loki",
+            "log_tokio"
+            //   "logging"
           ]
-          // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          // "target": "riscv32imc-esp-espidf",
-          // "features": ["executor", "logging", "cmp_esp", "cmp_plc", "serde_postcard"]
-          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          // "target": "x86_64-unknown-linux-gnu",
-          // "features": [
-          // "rustdoc",
-          // "executor",
-          // "single-thread",
-          //   "env_vars",
-          //   "logging",
-          //   "cmp_auth",
-          // "cmp_filesystem",
-          // "cmp_http_client",
-          // "cmp_http_server",
-          // "cmp_filesystem",
-          // "cmp_influxdb",
-          // "cmp_linux_i2c_master",
-          // "cmp_linux_spi_master"
-          // "cmp_linux_uart_master"
-          // "cmp_math",
-          // "cmp_modbus_client"
-          // "cmp_mqtt_client"
-          // "cmp_plc",
-          // "cmp_redis_client",
-          //   "cmp_os_process",
-          // "cmp_slint"
-          //   "cmp_surrealdb",
-          //   "cmp_system_info",
-          //   "cmp_telegram",
-          // "cmp_timescaledb"
-          // "cmp_websocket_client",
-          // "cmp_websocket_server"
-          // "serde_json",
-          // "serde_postcard"
-          // "serde_toml"
-          // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
@@ -73,13 +78,14 @@
           //   "rustdoc",
           //   "executor",
           // "logging",
-          // "cmp_http_client_wasm",
-          // "cmp_leptos"
-          // "cmp_plc"
-          // "cmp_websocket_client_wasm"
-          // "cmp_webstorage"
-          // "serde_json",
-          // "serde_toml"
+          //   "cmp_http_client_wasm",
+          //   "cmp_leptos",
+          //   "cmp_plc",
+          //   "cmp_websocket_client_wasm",
+          //   "cmp_webstorage",
+          //   "serde_json",
+          //   "serde_toml"
+          // "log_webconsole"
           // ]
         }
       }
