--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -31,46 +31,52 @@
           //   "cmp_timescaledb"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          // "target": "riscv32imc-esp-espidf",
-          // "features": ["executor", "log_esp", "cmp_esp", "cmp_plc", "serde_postcard"]
-          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          "target": "x86_64-unknown-linux-gnu",
+          "target": "riscv32imc-esp-espidf",
           "features": [
-            // "rustdoc",
             "executor",
-            // "single-thread",
-            //   "env_vars",
-            //   "logging",
-            //   "cmp_auth",
-            //   "cmp_filesystem",
-            //   "cmp_http_client",
-            //   "cmp_http_server",
-            //   "cmp_filesystem",
-            //   "cmp_influxdb",
-            //   "cmp_linux_i2c_master",
-            //   "cmp_linux_spi_master",
-            //   "cmp_linux_uart_master",
-            //   "cmp_math",
-            //   "cmp_modbus_client",
-            //   "cmp_mqtt_client",
-            //   "cmp_plc",
-            //   "cmp_redis_client",
-            //   "cmp_os_process",
-            //   "cmp_slint",
-            //   "cmp_surrealdb",
-            //   "cmp_system_info",
-            //   "cmp_telegram",
-            //   "cmp_timescaledb",
-            //   "cmp_websocket_client",
-            //   "cmp_websocket_server",
-            //   "serde_json",
-            //   "serde_postcard",
-            // "serde_toml"
-            "log_console",
-            // "log_loki",
-            "log_tokio"
-            //   "logging"
+            // "log_esp",
+            "cmp_esp",
+            "cmp_plc",
+            "serde_postcard"
           ]
+          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
+          // "target": "x86_64-unknown-linux-gnu",
+          // "features": [
+          // "rustdoc",
+          // "executor",
+          // "single-thread",
+          //   "env_vars",
+          //   "logging",
+          //   "cmp_auth",
+          //   "cmp_filesystem",
+          //   "cmp_http_client",
+          //   "cmp_http_server",
+          //   "cmp_filesystem",
+          //   "cmp_influxdb",
+          //   "cmp_linux_i2c_master",
+          //   "cmp_linux_spi_master",
+          //   "cmp_linux_uart_master",
+          //   "cmp_math",
+          //   "cmp_modbus_client",
+          //   "cmp_mqtt_client",
+          //   "cmp_plc",
+          //   "cmp_redis_client",
+          //   "cmp_os_process",
+          //   "cmp_slint",
+          //   "cmp_surrealdb",
+          //   "cmp_system_info",
+          //   "cmp_telegram",
+          //   "cmp_timescaledb",
+          //   "cmp_websocket_client",
+          //   "cmp_websocket_server",
+          //   "serde_json",
+          //   "serde_postcard",
+          // "serde_toml"
+          // "log_console",
+          // "log_loki",
+          // "log_tokio"
+          //   "logging"
+          // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
