--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -31,14 +31,14 @@
           //   "cmp_timescaledb"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          "target": "riscv32imc-esp-espidf",
-          "features": [
-            "executor",
-            // "log_esp",
-            "cmp_esp",
-            "cmp_plc",
-            "serde_postcard"
-          ]
+          // "target": "riscv32imc-esp-espidf",
+          // "features": [
+          //   "executor",
+          //   // "log_esp",
+          //   "cmp_esp",
+          //   "cmp_plc",
+          //   "serde_postcard"
+          // ]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
           // "target": "x86_64-unknown-linux-gnu",
           // "features": [
@@ -46,53 +46,51 @@
           // "executor",
           // "single-thread",
           //   "env_vars",
-          //   "logging",
-          //   "cmp_auth",
-          //   "cmp_filesystem",
-          //   "cmp_http_client",
-          //   "cmp_http_server",
-          //   "cmp_filesystem",
-          //   "cmp_influxdb",
-          //   "cmp_linux_i2c_master",
-          //   "cmp_linux_spi_master",
-          //   "cmp_linux_uart_master",
-          //   "cmp_math",
-          //   "cmp_modbus_client",
-          //   "cmp_mqtt_client",
-          //   "cmp_plc",
-          //   "cmp_redis_client",
-          //   "cmp_os_process",
-          //   "cmp_slint",
-          //   "cmp_surrealdb",
-          //   "cmp_system_info",
-          //   "cmp_telegram",
-          //   "cmp_timescaledb",
-          //   "cmp_websocket_client",
-          //   "cmp_websocket_server",
+          // "cmp_auth",
+          // "cmp_filesystem",
+          // "cmp_http_client",
+          // "cmp_http_server",
+          // "cmp_filesystem",
+          // "cmp_influxdb",
+          // "cmp_linux_i2c_master",
+          // "cmp_linux_spi_master",
+          // "cmp_linux_uart_master",
+          // "cmp_math",
+          // "cmp_modbus_client",
+          // "cmp_mqtt_client",
+          // "cmp_plc",
+          // "cmp_redis_client",
+          // "cmp_os_process",
+          // "cmp_slint",
+          // "cmp_surrealdb",
+          // "cmp_system_info",
+          // "cmp_telegram",
+          // "cmp_timescaledb",
+          // "cmp_websocket_client",
+          // "cmp_websocket_server",
           //   "serde_json",
           //   "serde_postcard",
-          // "serde_toml"
-          // "log_console",
-          // "log_loki",
-          // "log_tokio"
-          //   "logging"
+          //   "serde_toml",
+          //   "log_console",
+          //   "log_loki",
+          //   "log_tokio"
           // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
-          // "target": "wasm32-unknown-unknown",
-          // "features": [
-          // "single-thread", // Активировать обязательно !
-          //   "rustdoc",
-          //   "executor",
-          // "logging",
-          //   "cmp_http_client_wasm",
-          //   "cmp_leptos",
-          //   "cmp_plc",
-          //   "cmp_websocket_client_wasm",
-          //   "cmp_webstorage",
-          //   "serde_json",
-          //   "serde_toml"
-          // "log_webconsole"
-          // ]
+          "target": "wasm32-unknown-unknown",
+          "features": [
+            "single-thread", // Активировать обязательно !
+            //   "rustdoc",
+            "executor",
+            // "logging",
+            //   "cmp_http_client_wasm",
+            //   "cmp_leptos",
+            //   "cmp_plc",
+            //   "cmp_websocket_client_wasm",
+            //   "cmp_webstorage",
+            //   "serde_json",
+            //   "serde_toml"
+            "log_webconsole"
+          ]
         }
       }
     }
