--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -50,7 +50,7 @@
             // "cmp_filesystem",
             // "cmp_http_client",
             // "cmp_http_server",
-            // "cmp_filesystem",
+            "cmp_filesystem",
             // "cmp_influxdb",
             // "cmp_linux_i2c_master",
             // "cmp_linux_spi_master",
@@ -58,7 +58,7 @@
             // "cmp_math",
             // "cmp_modbus_client",
             // "cmp_mqtt_client",
-            // "cmp_plc",
+            "cmp_plc",
             // "cmp_redis_client",
             // "cmp_os_process",
             // "cmp_slint",
