--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -48,7 +48,7 @@
             //   "env_vars",
             // "cmp_auth",
             // "cmp_filesystem",
-            // "cmp_http_client",
+            "cmp_http_client",
             // "cmp_http_server",
             "cmp_filesystem",
             // "cmp_influxdb",
@@ -66,8 +66,8 @@
             // "cmp_system_info",
             // "cmp_telegram",
             "cmp_timescaledb",
-            // "cmp_websocket_client",
-            // "cmp_websocket_server",
+            "cmp_websocket_client",
+            "cmp_websocket_server",
             //   "serde_json",
             //   "serde_postcard",
             //   "serde_toml",
