--- a/target_config.json
+++ b/target_config.json
@@ -11,6 +11,7 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_gpio",
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
         "cmp_math",
@@ -47,6 +48,7 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_gpio",
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
         "cmp_modbus_client",
@@ -73,6 +75,7 @@
         "executor",
         "logging",
         "cmp_filesystem",
+        "cmp_linux_gpio",
         "cmp_linux_spi_master",
         "cmp_timescaledb"
       ],
