--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,7 +162,7 @@ tokio = { version = "^1.36.0", features = [
 [dev-dependencies]
 serde_json = { version = "1.0.143" }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
-itertools = "*"
+itertools = "0.14.0"
 
 [build-dependencies]
 embuild = { version = "0.33.1", features = ["espidf"] }
