--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ uuid = { version = "1.18.1", features = [
 any_spawner = { version = "0.3.0", optional = true }
 async-trait = { version = "0.1.89", optional = true }
 axum = { version = "0.8.4", optional = true }
-bincode = { version = "2.0.1", optional = true }
+bincode = { version = "1.3.3", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = " 0.1.7", optional = true }
 console-subscriber = { version = "0.4.1", optional = true }
@@ -98,7 +98,8 @@ tokio-metrics = { version = "0.4.5", optional = true }
 tokio-modbus = { version = "0.16.3", default-features = false, features = [
     "tcp",
 ], optional = true }
-tokio-tungstenite = { version = "0.27.0", optional = true }
+# TODO - обновить tokio-tungstenite
+tokio-tungstenite = { version = "=0.21.0", optional = true }
 tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
 toml = { version = "0.9.6", optional = true }
 tracing-appender = { version = "0.2.3", optional = true }
@@ -288,7 +289,7 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor"]
 
 ## Работа с периферией Raspberry Pi
-cmp_raspberrypi = ["executor", "serde_postcard", "dep:rppal"]
+cmp_raspberrypi = ["executor", "dep:bincode", "serde_postcard", "dep:rppal"]
 
 ## Компонент клиента Redis
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
