--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ version = "0.0.84"
 [dependencies]
 anyhow = { version = "1.0.99" }
 bitvec = { version = "1.0.1" }
+bytes = { version = "1.10.1" }
 byteorder = { version = "1.5.0" }
 # TODO - возможно заменить на time
 chrono = { version = "0.4.42", features = ["serde"] }
@@ -99,7 +100,7 @@ tokio-modbus = { version = "0.16.3", default-features = false, features = [
     "tcp",
 ], optional = true }
 # TODO - обновить tokio-tungstenite
-tokio-tungstenite = { version = "=0.21.0", optional = true }
+tokio-tungstenite = { version = "0.27.0", optional = true }
 tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
 toml = { version = "0.9.6", optional = true }
 tracing-appender = { version = "0.2.3", optional = true }
