--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -57,12 +57,12 @@
             // "cmp_filesystem",
             // "cmp_influxdb",
             // "cmp_linux_can",
-            "cmp_linux_gpio"
+            // "cmp_linux_gpio"
             // "cmp_linux_i2c_master",
             // "cmp_linux_spi_master",
             // "cmp_linux_uart_master",
             // "cmp_math"
-            // "cmp_modbus_client",
+            "cmp_modbus_client"
             // "cmp_mqtt_client",
             // "cmp_plc",
             // "cmp_redis_client",
