cmp_system_info fix

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -67,9 +67,9 @@
             // "cmp_plc",
             // "cmp_os_process",
             // "cmp_slint"
-            "cmp_surrealdb"
+            // "cmp_surrealdb"
             // "cmp_svg"
-            // "cmp_system_info",
+            "cmp_system_info"
             // "cmp_telegram",
             // "cmp_timescaledb",
             // "cmp_websocket_client",
